<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoblacionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Provincia"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/provincia" />

        <Spinner
            android:id="@+id/spn_Provincias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/provincias" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Poblacion"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/poblacion" />

        <Spinner
            android:id="@+id/spn_Poblaciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <RatingBar
        android:id="@+id/rb_Valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:numStars="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentarios" />

        <EditText
            android:id="@+id/et_Comentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_Guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </LinearLayout>

</LinearLayout>